# ToolCare

./: .gitignore  QUEM LER É VIADO!  README.md  package-lock.json  package.json  pyproject.toml
backend/: db.sqlite3  pyproject.toml  settings.py  urls.py  views.py
backend/app_backend/: admin.py  apps.py  cron.py  forms.py  login.py  models.py  serializers.py  signals.py  views.py
backend/app_backend/migrations/: 0001_initial.py  0002_remove_ferramenta_databaixa.py  0002_rename_idferramenta_emprestimo_numserie.py  0002_rename_idferramenta_ferramenta_codferramenta_and_more.py  0002_setor.py  0003_alter_emprestimo_numserie_and_more.py  0003_alter_funcionario_matriculafuncionario.py  0003_cargo.py  0004_alter_emprestimo_matriculafuncionario.py  0004_alter_emprestimo_numserie_and_more.py  0004_emprestimo_and_more.py  0005_alter_emprestimo_numserie_and_more.py  0005_alter_setor_codigosetor.py  0006_funcionario_cpf.py  0006_funcionario_status.py  0007_alter_emprestimo_matriculafuncionario.py  0007_alter_funcionario_cpf_alter_funcionario_imgfunc.py  0008_alter_emprestimo_matriculafuncionario.py  0008_alter_funcionario_imgfunc.py  0009_alter_emprestimo_matriculafuncionario.py  0009_alter_ferramenta_numserie_alter_funcionario_cpf_and_more.py  0010_alter_funcionario_matriculafuncionario.py  0010_itememprestimo_datadevolucao_and_more.py  0011_emprestimo_dataemprestimo.py  0012_remove_ferramenta_id_alter_ferramenta_numserie_and_more.py
backend/backend/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: ApiContext.js  (+9 more)
(+158 files in other folders)
